Fix highlight title double text wrapping

--- a/frontend/src/components/user/atoms/Specificities/Specificities.scss
+++ b/frontend/src/components/user/atoms/Specificities/Specificities.scss
@@ -45,6 +45,7 @@
         .country-highligth-title-color {
           color: $limeGreen;
           position: absolute;
+          margin-right: 2px;
           top: 5px;
           -webkit-text-stroke-width: 2px;
           -webkit-text-stroke-color: $grey;
